--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -12,12 +12,12 @@
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h1 id="objectName">{% if checkout %}Checkout {{ checkout.checkout_id }}{% else %}Create Checkout{% endif %}</h1>
                         {% if checkout %}
-                            <div>
-                                <button type="button" id="deleteButton" class="btn btn-danger"
+                            <div class="delete-button-container d-flex">
+                                <button type="button" id="deleteButton" class="btn btn-danger btn-sm"
                                         onclick="deleteObject('{{ url_for('api.delete_checkout', checkout_id=checkout.checkout_id) }}')">
                                     Delete
                                 </button>
-                                <button type="button" id="cancelDeleteButton" class="btn btn-secondary"
+                                <button type="button" id="cancelDeleteButton" class="btn btn-secondary btn-sm ms-1"
                                         style="display: none;"
                                         onclick="cancelDelete()">
                                     Cancel
