--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -14,12 +14,12 @@
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h1 id="objectName" class="mb-0">{% if item %}{{ item.name }}{% else %}Create Item{% endif %}</h1>
                         {% if item and current_user and current_user.is_admin %}
-                            <div>
-                                <button type="button" id="deleteButton" class="btn btn-danger btn-sm mr-2"
+                            <div class="delete-button-container d-flex">
+                                <button type="button" id="deleteButton" class="btn btn-danger btn-sm"
                                         onclick="deleteObject('{{ url_for('api.delete_item', item_id=item.item_id) }}')">
                                     Delete
                                 </button>
-                                <button type="button" id="cancelDeleteButton" class="btn btn-secondary btn-sm"
+                                <button type="button" id="cancelDeleteButton" class="btn btn-secondary btn-sm ms-1"
                                         style="display: none;"
                                         onclick="cancelDelete()">
                                     Cancel
