--- a/app/templates/item_list.html
+++ b/app/templates/item_list.html
@@ -7,38 +7,49 @@
 
 
 {% block main %}
-        <div class="list-table highlightable page-card" style="max-width: 1500px;">
-            <div class="table-label">
-                <h3>Items</h3>
-                {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('main.create_item') }}" class="btn btn-success btn-block mb-2" role="button">
-                        <img src="{{ url_for('static', filename='images/add-item.png') }}" alt="Add" style="width: 24px; height: 24px;">
-                    </a>
-                {% endif %}
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h3>Items</h3>
+                        {% if current_user.is_authenticated %}
+                            <a href="{{ url_for('main.create_item') }}" class="btn btn-success btn-block mb-2" role="button">
+                                <img src="{{ url_for('static', filename='images/add-item.png') }}" alt="Add"
+                                     style="width: 24px; height: 24px;">
+                            </a>
+                        {% endif %}
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-hover">
+                                <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Brand</th>
+                                    <th>Model Number</th>
+                                    <th>Serial Number</th>
+                                    <th>Location</th>
+                                    <th>Status</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for item in items %}
+                                    <tr onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
+                                        <td>{{ item.name }}</td>
+                                        <td>{{ item.brand }}</td>
+                                        <td>{{ item.model }}</td>
+                                        <td>{{ item.serial }}</td>
+                                        <td>{{ item.location_name }}</td>
+                                        <td>{{ item.status_name }}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <table>
-                <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Brand</th>
-                    <th>Model Number</th>
-                    <th>Serial Number</th>
-                    <th>Location</th>
-                    <th>Status</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for item in items %}
-                    <tr onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
-                        <td>{{ item.name }}</td>
-                        <td>{{ item.brand }}</td>
-                        <td>{{ item.model }}</td>
-                        <td>{{ item.serial }}</td>
-                        <td>{{ item.location_name }}</td>
-                        <td>{{ item.status_name }}</td>
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
         </div>
+    </div>
 {% endblock %}
