--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,19 +4,22 @@
 {% endblock %}
 
 {% block main %}
+<div class="page-container">
     <div class="container">
         {% if current_user.is_authenticated %}
-            <div class="row">
-                <div class="col-md-7" style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
-                    <div class="d-flex justify-content-between mb-2">
-                        <a href="{{ url_for('main.all_items') }}" class="btn btn-primary btn-block mb-2">Items</a>
-                        <a href="{{ url_for('main.create_item') }}" class="btn btn-success btn-block mb-2">
-                            <img src="{{ url_for('static', filename='images/add-item.png') }}" alt="Add" style="width: 24px; height: 24px;">
-                        </a>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead>
+        <div class="row">
+            <div class="col-md-7"
+                style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
+                <div class="d-flex justify-content-between mb-2">
+                    <a href="{{ url_for('main.all_items') }}" class="btn btn-primary btn-block mb-2">Items</a>
+                    <a href="{{ url_for('main.create_item') }}" class="btn btn-success btn-block mb-2">
+                        <img src="{{ url_for('static', filename='images/add-item.png') }}" alt="Add"
+                            style="width: 24px; height: 24px;">
+                    </a>
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
                             <tr>
                                 <th>Name</th>
                                 <th>Brand</th>
@@ -25,40 +28,53 @@
                                 <th>Location</th>
                                 <th>Status</th>
                             </tr>
-                            </thead>
-                            <tbody>
+                        </thead>
+                        <tbody>
                             {% for item in items %}
-                                <tr onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
-                                    <td>{{ item.name }}</td>
-                                    <td>{{ item.brand }}</td>
-                                    <td>{{ item.model }}</td>
-                                    <td>{{ item.serial }}</td>
-                                    <td>{{ item.location_name }}</td>
-                                    <td>{{ item.status_name }}</td>
-                                </tr>
+                            <tr
+                                onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
+                                <td>{{ item.name }}</td>
+                                <td>{{ item.brand }}</td>
+                                <td>{{ item.model }}</td>
+                                <td>{{ item.serial }}</td>
+                                <td>{{ item.location_name }}</td>
+                                <td>{{ item.status_name }}</td>
+                            </tr>
                             {% endfor %}
-                            </tbody>
-                        </table>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-md-5"
+                style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
+                <div class="d-flex justify-content-between mb-2">
+                    <script>
+                        const currentUserName = "{{ current_user.username }}";
+                        const isAdmin = {{ current_user.is_admin | tojson }};
+                    </script>
+                    <script src="{{ url_for('static', filename='javascript/employee_filter.js') }}"></script>
+                    <script>
+                        function filterTableWrapper(filter) {
+                            filterTable(filter, currentUserName, isAdmin);
+                        }
+                    </script>
+                    <div>
+                        <button class="btn btn-primary" onclick="filterTableWrapper('all')">Employees</button>
+                        <button class="btn btn-info" onclick="filterTableWrapper('leads')">Leads</button>
+                        <button class="btn btn-info" onclick="filterTableWrapper('reports')">Reports</button>
+                    </div>
+                    <div>
+                        {% if current_user.is_authenticated and current_user.is_admin %}
+                        <a href="{{ url_for('main.create_employee') }}" class="btn btn-success btn-block mb-2">
+                            <img src="{{ url_for('static', filename='images/add-user.png') }}" alt="Add"
+                                style="width: 24px; height: 24px;">
+                        </a>
+                        {% endif %}
                     </div>
                 </div>
-                <div class="col-md-5" style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
-                    <div class="d-flex justify-content-between mb-2">
-                        <div>
-                            <a href="{{ url_for('main.all_employees') }}" class="btn btn-primary">Employees</a>
-                            <a href="{{ url_for('main.filter_employees', filter='leads') }}" class="btn btn-info">Leads</a>
-                            <a href="{{ url_for('main.filter_employees', filter='reports') }}" class="btn btn-info">Reports</a>
-                        </div>
-                        <div>
-                            {% if current_user.is_authenticated and current_user.is_admin %}
-                                <a href="{{ url_for('main.create_employee') }}" class="btn btn-success btn-block mb-2">
-                                    <img src="{{ url_for('static', filename='images/add-user.png') }}" alt="Add" style="width: 24px; height: 24px;">
-                                </a>
-                            {% endif %}
-                        </div>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
                             <tr>
                                 <th>ID</th>
                                 <th>First Name</th>
@@ -67,34 +83,36 @@
                                 <th>Reports To</th>
                                 <th>Username</th>
                             </tr>
-                            </thead>
-                            <tbody>
+                        </thead>
+                        <tbody id="employeeTableBody">
                             {% for employee in employees %}
-                                <tr onclick="window.location.href='{{ url_for('main.employee_details', employee_id=employee.employee_id) }}';">
-                                    <td>{{ employee.employee_id }}</td>
-                                    <td>{{ employee.first_name }}</td>
-                                    <td>{{ employee.last_name }}</td>
-                                    <td>{{ employee.title }}</td>
-                                    <td>{{ employee.reports_to_name }}</td>
-                                    <td>{{ employee.username }}</td>
-                                </tr>
+                            <tr data-reports-to="{{ employee.reports_to_name }}">
+                                <td>{{ employee.employee_id }}</td>
+                                <td>{{ employee.first_name }}</td>
+                                <td>{{ employee.last_name }}</td>
+                                <td>{{ employee.title }}</td>
+                                <td>{{ employee.reports_to_name }}</td>
+                                <td>{{ employee.username }}</td>
+                            </tr>
                             {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                        </tbody>
+                    </table>
                 </div>
             </div>
-            <div class="row mt-3">
-                <div class="col-md-12" style="border: 1px solid #ddd; border-radius: 10px; padding: 20px; background-color: #f8f9fa;">
-                    <div class="d-flex justify-content-between mb-2">
-                        <a href="{{ url_for('main.all_checkouts') }}" class="btn btn-primary btn-block mb-2">Checkouts</a>
-                        <a href="{{ url_for('main.create_checkout') }}" class="btn btn-success btn-block mb-2">
-                            <img src="{{ url_for('static', filename='images/checkout.png') }}" alt="Add" style="width: 24px; height: 24px;">
-                        </a>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-hover">
-                            <thead>
+        </div>
+        <div class="row mt-3">
+            <div class="col-md-12"
+                style="border: 1px solid #ddd; border-radius: 10px; padding: 20px; background-color: #f8f9fa;">
+                <div class="d-flex justify-content-between mb-2">
+                    <a href="{{ url_for('main.all_checkouts') }}" class="btn btn-primary btn-block mb-2">Checkouts</a>
+                    <a href="{{ url_for('main.create_checkout') }}" class="btn btn-success btn-block mb-2">
+                        <img src="{{ url_for('static', filename='images/checkout.png') }}" alt="Add"
+                            style="width: 24px; height: 24px;">
+                    </a>
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
                             <tr>
                                 <th>Checkout Id</th>
                                 <th>Item Id</th>
@@ -102,29 +120,30 @@
                                 <th>Checkout Date</th>
                                 <th>Return Date</th>
                             </tr>
-                            </thead>
-                            <tbody>
+                        </thead>
+                        <tbody>
                             {% for checkout in checkouts %}
-                                <tr onclick="window.location.href='{{ url_for('main.checkout_details', checkout_id=checkout.checkout_id) }}';">
-                                    <td>{{ checkout.checkout_id }}</td>
-                                    <td>{{ checkout.item_id }}</td>
-                                    <td>{{ checkout.employee_id }}</td>
-                                    <td>{{ checkout.checkout_date }}</td>
-                                    <td>{{ checkout.returned_date }}</td>
-                                </tr>
+                            <tr
+                                onclick="window.location.href='{{ url_for('main.checkout_details', checkout_id=checkout.checkout_id) }}';">
+                                <td>{{ checkout.checkout_id }}</td>
+                                <td>{{ checkout.item_id }}</td>
+                                <td>{{ checkout.employee_id }}</td>
+                                <td>{{ checkout.checkout_date }}</td>
+                                <td>{{ checkout.returned_date }}</td>
+                            </tr>
                             {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                        </tbody>
+                    </table>
                 </div>
             </div>
+        </div>
         {% else %}
-            <div class="row">
-                <div class="col-md-12">
-                    {# <a href="{{ url_for('main.all_items') }}" class="btn btn-primary btn-block mb-2">Items</a> #}
-                    <div class="list-table highlightable page-card">
-                        <table class="table table-hover">
-                            <thead>
+        <div class="row">
+            <div class="col-md-12">
+                {# <a href="{{ url_for('main.all_items') }}" class="btn btn-primary btn-block mb-2">Items</a> #}
+                <div class="list-table highlightable page-card">
+                    <table class="table table-hover">
+                        <thead>
                             <tr>
                                 <th>Name</th>
                                 <th>Brand</th>
@@ -133,23 +152,25 @@
                                 <th>Location</th>
                                 <th>Status</th>
                             </tr>
-                            </thead>
-                            <tbody>
+                        </thead>
+                        <tbody>
                             {% for item in items %}
-                                <tr onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
-                                    <td>{{ item.name }}</td>
-                                    <td>{{ item.brand }}</td>
-                                    <td>{{ item.model }}</td>
-                                    <td>{{ item.serial }}</td>
-                                    <td>{{ item.location_name }}</td>
-                                    <td>{{ item.status_name }}</td>
-                                </tr>
+                            <tr
+                                onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
+                                <td>{{ item.name }}</td>
+                                <td>{{ item.brand }}</td>
+                                <td>{{ item.model }}</td>
+                                <td>{{ item.serial }}</td>
+                                <td>{{ item.location_name }}</td>
+                                <td>{{ item.status_name }}</td>
+                            </tr>
                             {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                        </tbody>
+                    </table>
                 </div>
             </div>
+        </div>
         {% endif %}
     </div>
+</div>
 {% endblock %}
