--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -44,10 +44,20 @@
                     </div>
                     <div class="col-md-5" style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
                         <div class="d-flex justify-content-between mb-2">
+                            <script>
+                                const currentUserName = "{{ current_user.username }}";
+                                const isAdmin = {{ current_user.is_admin | tojson }};
+                            </script>
+                            <script src="{{ url_for('static', filename='javascript/employee_filter.js') }}"></script>
+                            <script>
+                                function filterTableWrapper(filter) {
+                                    filterTable(filter, currentUserName, isAdmin);
+                                }
+                            </script>
                             <div>
-                                <a href="{{ url_for('main.all_employees') }}" class="btn btn-primary">Employees</a>
-                                <a href="{{ url_for('main.filter_employees', filter='leads') }}" class="btn btn-info">Leads</a>
-                                <a href="{{ url_for('main.filter_employees', filter='reports') }}" class="btn btn-info">Reports</a>
+                                <button class="btn btn-primary" onclick="filterTableWrapper('all')">Employees</button>
+                                <button class="btn btn-info" onclick="filterTableWrapper('leads')">Leads</button>
+                                <button class="btn btn-info" onclick="filterTableWrapper('reports')">Reports</button>
                             </div>
                             <div>
                                 {% if current_user.is_authenticated and current_user.is_admin %}
@@ -69,9 +79,9 @@
                                     <th>Username</th>
                                 </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="employeeTableBody">
                                 {% for employee in employees %}
-                                    <tr onclick="window.location.href='{{ url_for('main.employee_details', employee_id=employee.employee_id) }}';">
+                                    <tr data-reports-to="{{ employee.reports_to_name }}">
                                         <td>{{ employee.employee_id }}</td>
                                         <td>{{ employee.first_name }}</td>
                                         <td>{{ employee.last_name }}</td>
