--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -28,18 +28,33 @@
                     <div class="card-body">
                         <form id="objectForm">
                             <input type="hidden" name="csrf_token" id="csrf_token" value="{{ csrf_token() }}">
-                            <div class="form-group">
-                                <label for="name">Item ID:</label>
-                                <input type="text" class="form-control" id="name" name="item_id" value="{{ (checkout.item_id if checkout) or '' }}"
-                                    {% if checkout %}disabled{% endif %}>
+                            <div class="mb-3">
+                                <label for="item_choices" class="form-label">Item Choices:</label>
+                                <select class="form-select" name="item_id" id="item_choices" {% if checkout %}disabled{% endif %}>
+                                    <option value=""> </option>
+                                    {% for item in item_choices %}
+                                        {% if item.status_id == 1 or (checkout and checkout.item_id == item.item_id) %}
+                                            <option value="{{ item.item_id }}"
+                                                    {% if checkout and checkout.item_id == item.item_id %}selected{% endif %}>
+                                                {{ item.name }}
+                                            </option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
                             </div>
                             {% if current_user.is_admin %}
-                                <div class="form-group">
-                                    <label for="employee_id">Employee ID:</label>
-                                    <input type="text" class="form-control" id="employee_id" name="employee_id"
-                                        value="{{ (checkout.employee_id if checkout) or '' }}"
-                                        {% if checkout %}disabled{% endif %}>
-                                </div>
+                                <div class="mb-3">
+                                <label for="employee_choices" class="form-label">Item Choices:</label>
+                                <select class="form-select" name="employee_id" id="employee_choices" {% if checkout %}disabled{% endif %}>
+                                    <option value=""> </option>
+                                    {% for employee in employee_choices %}
+                                        <option value="{{ employee.employee_id }}"
+                                                {% if checkout and checkout.employee_id == employee.employee_id %}selected{% endif %}>
+                                            {{ employee.first_name }} {{ employee.last_name }}
+                                        </option>
+                                    {% endfor %}
+                                </select>
+                            </div>
                             {% endif %}
                             {% if checkout %}
                                 <div class="form-group">
