Change item and employee id to name

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -97,8 +97,8 @@
                             <thead>
                             <tr>
                                 <th>Checkout Id</th>
-                                <th>Item Id</th>
-                                <th>Employee Id</th>
+                                <th>Item</th>
+                                <th>Employee</th>
                                 <th>Checkout Date</th>
                                 <th>Return Date</th>
                             </tr>
@@ -107,8 +107,8 @@
                             {% for checkout in checkouts %}
                                 <tr onclick="window.location.href='{{ url_for('main.checkout_details', checkout_id=checkout.checkout_id) }}';">
                                     <td>{{ checkout.checkout_id }}</td>
-                                    <td>{{ checkout.item_id }}</td>
-                                    <td>{{ checkout.employee_id }}</td>
+                                    <td>{{ checkout.item_name }}</td>
+                                    <td>{{ checkout.employee_name }}</td>
                                     <td>{{ checkout.checkout_date }}</td>
                                     <td>{{ checkout.returned_date }}</td>
                                 </tr>
