--- a/app/templates/checkout_list.html
+++ b/app/templates/checkout_list.html
@@ -21,8 +21,8 @@
                             <table class="table table-hover">
                                 <thead>
                                 <tr>
-                                    <th>Item Id</th>
-                                    <th>Employee Id</th>
+                                    <th>Item</th>
+                                    <th>Employee</th>
                                     <th>Checkout Date</th>
                                     <th>Return Date</th>
                                 </tr>
@@ -30,8 +30,8 @@
                                 <tbody>
                                 {% for checkout in checkouts %}
                                     <tr onclick="window.location.href='{{ url_for('main.checkout_details', checkout_id=checkout.checkout_id) }}';">
-                                        <td>{{ checkout.item_id }}</td>
-                                        <td>{{ checkout.employee_id }}</td>
+                                        <td>{{ checkout.item_name }}</td>
+                                        <td>{{ checkout.employee_name }}</td>
                                         <td>{{ checkout.checkout_date }}</td>
                                         <td>{{ checkout.returned_date }}</td>
                                     </tr>
