--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,10 +4,10 @@
 {% endblock %}
 
 {% block main %}
-    <div class="container">
+    <div class="container-md">
         {% if current_user.is_authenticated %}
             <div class="row">
-                <div class="col-md-7" style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
+                <div class="col-xl-7 mb-3 mb-xl-0" style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
                     <div class="d-flex justify-content-between mb-2">
                         <a href="{{ url_for('main.all_items') }}" class="btn btn-primary btn-block mb-2">Items</a>
                         <a href="{{ url_for('main.create_item') }}" class="btn btn-success btn-block mb-2">
@@ -41,7 +41,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="col-md-5" style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
+                <div class="col-xl-5" style="border: 1px solid #ddd; border-radius: 10px; padding: 10px; background-color: #f8f9fa;">
                     <div class="d-flex justify-content-between mb-2">
                         <div>
                             <a href="{{ url_for('main.all_employees') }}" class="btn btn-primary">Employees</a>
