--- a/app/static/stylesheets/header.css
+++ b/app/static/stylesheets/header.css
@@ -11,21 +11,27 @@ p, a, h1, h2, h3, h4, h5, h6 {
     font-family: 'Trebuchet MS', Helvetica, sans-serif;
 }
 
-header {
-    position: fixed;
-    width: 100%;
-    height: 4rem;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 100;
-}
+/*header {*/
+/*    position: fixed;*/
+/*    width: 100%;*/
+/*    height: 4rem;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    z-index: 100;*/
+/*}*/
 
 .header-link {
     text-decoration: none;
 }
 
 .main-content {
-    margin-top: 5rem;
+    margin-top: 4rem;
     margin-bottom: 2rem;
+}
+
+@media (max-width: 768px) {
+    .main-content {
+        margin-top: 3rem;
+    }
 }
