--- a/app/static/stylesheets/main_content.css
+++ b/app/static/stylesheets/main_content.css
@@ -15,3 +15,12 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     padding: 20px;
 }
+
+/*body{font-size: 1rem;}*/
+
+
+/*@media (max-width: 576px) {*/
+/*    body, button{*/
+/*        font-size: 1rem;*/
+/*    }*/
+/*}*/
