--- a/app/templates/documentation.html
+++ b/app/templates/documentation.html
@@ -95,7 +95,7 @@
 {% endblock %}
 
 {% block printable %}
-    {% if document and current_user and current_user.is_authenticated %}
+    {% if document %}
         <script src="{{ url_for('static', filename='javascript/checkout.js') }}"></script>
         <script src="{{ url_for('static', filename='javascript/qrcode/jquery.min.js') }}"></script>
         <script src="{{ url_for('static', filename='javascript/qrcode/qrcode.js') }}"></script>
